v.6.6.8 - Bugfix #399 * Updated nowrap and font

--- a/rsscrawler/web/css/rsscrawler.css
+++ b/rsscrawler/web/css/rsscrawler.css
@@ -54,7 +54,8 @@ thead {
 }
 
 td {
-    font-family: monospace;
+    font-family: Courier New, Courier, Lucida Sans Typewriter, Lucida Typewriter, monospace;
+    white-space: nowrap;
 }
 
 .app {
